# qtantic

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: testing.yml
docs/: fields_widgets.md  index.md  simple_dialog.md  tabbed_dialog.md
src/qtantic/: __init__.py  model_parser.py  simple_dialog.py  simple_dialog_tools.py  tabbed_dialog_tools.py
tests/: test_simple_dialog.py  test_tabbed_dialog.py
