[project]
name = "qtantic"
version = "0.1.0"
description = "A python library to create qtpy based dialogs and system configuration managers based on pydantic models."
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]
dependencies = [
    "pydantic>=2.9.1",
    "qtpy>=2.4.1",
]
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyqt6>=6.7.1",
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qtantic"]
