[project]
name = "qtantic"
version = "0.1.0"
description = "A python library to create qtpy based dialogs and system configuration managers based on pydantic models."
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]
dependencies = [
    "pydantic>=2.9.1",
    "qtpy>=2.4.1",
]
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-qt>=4.4.0",
    "pytest-cov>=5.0.0",
    "pyside6>=6.7.2",
]

[tool.rye.scripts]
test_cov = "rye run pytest --cov --cov-report xml"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qtantic"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=qtantic -v"
testpaths = "tests"
